--- a/packages/divbase-api/src/divbase_api/migrations/README
+++ b/packages/divbase-api/src/divbase_api/migrations/README
@@ -1,87 +1,1 @@
-# Database Migrations with Alembic
-
-This directory contains database migrations for the DivBase API. We use [Alembic](https://alembic.sqlalchemy.org/) to manage database schema changes.
-
-## Overview
-
-- **Migration files** are stored in `versions/` with descriptive names: `YYYY-MM-DD_description.py`
-- **Migrations are generated** by comparing SQLAlchemy models with the current database instance. 
-- **Migrations are applied automatically** in local development when the stack starts up using an init-container (db-migrator).
-- **In production/deployed enviroments**, migrations should be applied as part of the deployment process - multi step, see below. 
-- FastAPI's lifespan event **automatically checks** if migrations are up to date during startup. - error if not.
-
-
-### Creating a New Migration
-
-Note: The FastAPI lifespan event checks (but does not apply them) if all migration scripts have been applied on startup. 
-
-This means when you create a new migration script in watch mode, the app will error on restart until the migration is applied.
-If you instead make you changes using compose up, then make sure to restart the stack before generating the migration (step 2) so the changes to your db models are included. 
-
-This is a little awkward, but is primarily for protecting the deployed instances. 
-
-
-1. **Make changes** to the SQLAlchemy models in `packages/divbase-api/src/divbase_api/models/`
-
-If you add a new model, include it in the `packages/divbase-api/src/divbase_api/models/__init__.py` so Alembic can detect it.
-
-Make sure the divbase stack is running:
-
-```bash
-docker compose -f docker/divbase_compose.yaml down && docker compose -f docker/divbase_compose.yaml watch 
-```
-
-2. **Generate the migration** by entering the FastAPI container:
-```bash
-# Enter the running FastAPI container
-docker compose -f docker/divbase_compose.yaml exec -it fastapi sh 
-
-# Generate migration (use descriptive names)
-alembic revision --autogenerate -m "write_your_useful_slug_here"
-
-# Exit container
-exit
-```
-
-**NOTE: If you've been using docker compose watch up to this point, it is expected that now the FastAPI service will be in a crashed state due to pending migrations.**
-
-3. **Review the generated migration** file in `packages/divbase-api/src/divbase_api/migrations/versions/` directory
-   - The changes made in the container are automatically synced to your host machine.
-   - Check that the auto generated changes correctly represent your intended changes.
-   - Be extra careful if you rename a table, or if you are dropping columns or tables. 
-   - Modify the `upgrade()` and `downgrade()` functions if needed to actually achieve the desired schema changes.
-
-4. **Test out the migration:**
-
-- In local development, migrations are applied automatically when the stack starts up using the `db-migrator` init-container.
-- The `db-migrator` ensures that migrations are applied before starting FastAPI and worker services (via `condition: service_completed_successfully`).
-- Do not down the volumes, this is a good initial test to ensure the migration works as expected.
-- To test the migration:
-```bash
-# interrupt if you have a process already running. 
-docker compose -f docker/divbase_compose.yaml down && docker compose -f docker/divbase_compose.yaml watch
-```
-
-This will make the db-migrator init-container run the migrations, and then start fastapi and workers if successful.
-If issues check the db-migrator logs. 
-
-
-## Production Deployment
-
-TODO 
-
-
-
-## Troubleshooting
-
-### "No changes in schema detected"
-- Ensure your models are properly imported in `models/base.py`
-- Check that your model changes are actually different from the database. 
-
-### Migration fails to apply
-- Check the migration file for syntax errors
-- Ensure the database is in the expected state
-- Use `alembic current` to check current migration status
-
-### Starlette admin/admin panel not showing the models 
-- You need the models in your src to match the postgres schema. So if you have pending changes (that you have or have not created migrations for) they wont display until you've actually done the migration. 
+see docs/database_migrations.md for details.
